--- a/1e100ibu.ipynb
+++ b/1e100ibu.ipynb
@@ -3,10 +3,9 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "1e100ibu-experiments.ipynb",
+      "name": "1e100ibu.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyO2H1yjkemtyjSstKya7Ca8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -52,8 +51,37 @@
       "metadata": {
         "id": "Sl9RJDTxJOTY"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip install icecream\n",
+        "from icecream import ic"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Yet9JpBt8kcx",
+        "outputId": "5f3252cd-d2a7-40f4-8b01-9242e44ad660"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Requirement already satisfied: icecream in /usr/local/lib/python3.7/dist-packages (2.1.1)\n",
+            "Requirement already satisfied: asttokens>=2.0.1 in /usr/local/lib/python3.7/dist-packages (from icecream) (2.0.5)\n",
+            "Requirement already satisfied: pygments>=2.2.0 in /usr/local/lib/python3.7/dist-packages (from icecream) (2.6.1)\n",
+            "Requirement already satisfied: executing>=0.3.1 in /usr/local/lib/python3.7/dist-packages (from icecream) (0.8.2)\n",
+            "Requirement already satisfied: colorama>=0.3.9 in /usr/local/lib/python3.7/dist-packages (from icecream) (0.4.4)\n",
+            "Requirement already satisfied: six in /usr/local/lib/python3.7/dist-packages (from asttokens>=2.0.1->icecream) (1.15.0)\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -66,13 +94,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "TZ8cumFHEEQd",
-        "outputId": "d9fa0dcc-1eb6-4a4f-c9b9-524aa6c0a60d"
+        "outputId": "24560a00-cc9d-4951-c43e-f999fffd0c6f"
       },
       "outputs": [
         {
@@ -82,7 +110,7 @@
             "Downloading...\n",
             "From: https://drive.google.com/uc?id=12tEEYQcHZtg5aWyfIiWWVIDAJNT-5d_T\n",
             "To: /content/SNAP-Ratebeer.txt\n",
-            "100% 1.74G/1.74G [00:12<00:00, 143MB/s]\n",
+            "100% 1.74G/1.74G [00:16<00:00, 108MB/s]\n",
             "Dataset head (trailing newline makes entry end): \n",
             "beer/name: John Harvards Simcoe IPA\n",
             "beer/beerId: 63836\n",
@@ -143,7 +171,7 @@
       "metadata": {
         "id": "2W2kAaEJI_iI"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -154,7 +182,7 @@
       "metadata": {
         "id": "LQJqC6WDcYyQ"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -184,9 +212,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "CghoFLGMnHbF",
-        "outputId": "033b8d02-ba8f-49a9-c298-269ff524a7d4"
+        "outputId": "bfcfced1-fb14-470b-a769-14c8524ccd95"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -214,7 +242,9 @@
       "source": [
         "values = torch.tensor([1.0, 2.0, 3.0], requires_grad=True)\n",
         "l2_loss = values.square().sum()\n",
+        "# l2_loss.zero_grad()\n",
         "l2_loss.backward()\n",
+        "\n",
         "print(values.grad)"
       ],
       "metadata": {
@@ -222,9 +252,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "PG0oYrrgn9S7",
-        "outputId": "d613e2ff-929c-4866-eda2-475c2c72c87e"
+        "outputId": "b7b49f6e-5a85-4bfd-813d-a05e4e5ed344"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -253,29 +283,34 @@
       "metadata": {
         "id": "eUoc6febB8vQ"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "theta = torch.empty(word_count, aspect_count, requires_grad=True)\n",
+        "# theta = torch.empty(word_count, aspect_count, requires_grad=True)\n",
+        "theta = torch.rand((word_count, aspect_count), requires_grad=True)\n",
         "with torch.no_grad():\n",
-        "  torch.nn.init.kaiming_uniform_(theta)\n",
+        "    theta *= 0.9\n",
+        "#   torch.nn.init.kaiming_uniform_(theta)\n",
         "  # enforce 1 initialization on aspect name (page 4)\n",
         "  aspect_ids = vocab.lookup_indices(aspects)\n",
         "  theta[aspect_ids, :] = 1\n",
         "\n",
+        "# phi = torch.rand((word_count, , aspect_count), requires_grad=True)\n",
         "\n",
-        "phi = torch.rand((word_count, aspect_count), requires_grad=True)\n",
+        "aspect_max_rating = [5, 10, 5, 10, 20]\n",
+        "phis = {i : torch.rand((word_count, aspect_max_rating[i]), requires_grad=True) for i in range(aspect_count)}\n",
+        "\n",
         "with torch.no_grad():\n",
         "  # normalize that sum across all words is 1 for a given aspect (eq. 7)\n",
-        "  phi = phi / phi.sum(dim=0)"
+        "  phis = {i : phi / phi.sum(dim=0) for i, phi in phis.items()}"
       ],
       "metadata": {
         "id": "VGjeZUFLsZ5e"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -284,103 +319,58 @@
         "def review_text2ids(review_text: str):\n",
         "  return vocab.lookup_indices(tokenizer(review_text))\n",
         "\n",
-        "def review_text2weights(review_text: str):\n",
-        "  ids = review_text2ids(review_text)\n",
-        "  thetas = theta[ids]\n",
-        "  phis   = phi[ids]\n",
-        "  return thetas, phis\n",
+        "# def review_text2weights(review_text: str):\n",
+        "#   ids = review_text2ids(review_text)\n",
+        "#   thetas = theta[ids]\n",
+        "#   phis   = phi[ids]\n",
+        "#   return thetas, phis\n",
         "\n",
-        "def review_probability(review_text: str):\n",
-        "  theta_weight, phi_weight = 1.0, 1.0\n",
-        "  thetas, phis = review_text2weights(review_text)\n",
-        "  return torch.mean(\n",
-        "      theta_weight * thetas +\n",
-        "      phi_weight * phis\n",
-        "  )"
+        "# def review_likelihood(review_text: str):\n",
+        "#   theta_weight, phi_weight = 1.0, 1.0\n",
+        "#   thetas, phis = review_text2weights(review_text)\n",
+        "#   return torch.mean(\n",
+        "#       theta_weight * thetas +\n",
+        "#       phi_weight * phis\n",
+        "#   )"
       ],
       "metadata": {
         "id": "qbpx6lSOwfkg"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "review_probability('Ich trinke Bier gern')"
+        "review_likelihood('Ich trinke Bier gern')"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "-7FWEmRcxGuf",
-        "outputId": "4bc513d2-d84d-4a4b-f35e-0201472a6a0d"
+        "id": "-7FWEmRcxGuf"
       },
-      "execution_count": 47,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "tensor(0.0300, grad_fn=<MeanBackward0>)"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 47
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "review_probability('Amazing hops and taste')"
+        "review_likelihood('Amazing hops and taste')"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "e1e3b6ca-d2e3-4566-c6e9-172355605fa0",
         "id": "JEGHzhrmMea4"
       },
-      "execution_count": 50,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "tensor(0.4446, grad_fn=<MeanBackward0>)"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 50
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "review_probability('appearance aroma palate taste overall')"
+        "review_likelihood('appearance aroma palate taste overall')"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "HE-sIjQrLRvA",
-        "outputId": "a5fe6778-ee42-4749-e7cc-cb468804de7f"
+        "id": "HE-sIjQrLRvA"
       },
-      "execution_count": 48,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "tensor(1.0000, grad_fn=<MeanBackward0>)"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 48
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -388,28 +378,10 @@
         "print(theta)"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "MkkI6bVbLk0A",
-        "outputId": "0a5a7dfb-bf9c-4abf-970b-aeff65f94321"
+        "id": "MkkI6bVbLk0A"
       },
-      "execution_count": 33,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "tensor([[-0.3340,  0.3367, -0.9189, -0.6612, -0.2976],\n",
-            "        [ 0.0410,  0.4752,  0.4142,  0.0634,  1.0900],\n",
-            "        [ 0.6639,  0.3962, -0.9144,  0.8693, -0.1799],\n",
-            "        ...,\n",
-            "        [-0.3180, -0.9306, -0.2156, -0.8973, -0.6841],\n",
-            "        [-0.8311,  0.4176,  0.6423,  0.6981,  0.0203],\n",
-            "        [ 0.7947, -0.3581, -0.7585, -0.2399,  0.4761]], requires_grad=True)\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -417,25 +389,10 @@
         "vocab.lookup_indices(aspects)"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "NU5p9ZeMLnz8",
-        "outputId": "d6081735-579a-44e7-a17c-2cfe661b7e55"
+        "id": "NU5p9ZeMLnz8"
       },
-      "execution_count": 34,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "[201, 10, 90, 31, 137]"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 34
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -444,6 +401,147 @@
       ],
       "metadata": {
         "id": "ClLM3hVCL96o"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Implementation of $(1)$"
+      ],
+      "metadata": {
+        "id": "yOc_2b-E4o0c"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def ratebeer(review):\n",
+        "    \"\"\"\n",
+        "    get review like this\n",
+        "    \n",
+        "    beer/name: John Harvards Simcoe IPA\n",
+        "    beer/beerId: 63836\n",
+        "    beer/brewerId: 8481\n",
+        "    beer/ABV: 5.4\n",
+        "    beer/style: India Pale Ale &#40;IPA&#41;\n",
+        "    review/appearance: 4/5\n",
+        "    review/aroma: 6/10\n",
+        "    review/palate: 3/5\n",
+        "    review/taste: 6/10\n",
+        "    review/overall: 13/20\n",
+        "    review/time: 1157587200\n",
+        "    review/profileName: hopdog\n",
+        "    review/text: On tap at the Springfield, PA location. Poured a deep and cloudy orange (almost a copper) color with a small sized off white head. Aromas or oranges and all around citric. Tastes of oranges, light caramel and a very light grapefruit finish. I too would not believe the 80+ IBUs - I found this one to have a very light bitterness with a medium sweetness to it. Light lacing left on the glass.\n",
+        "    \n",
+        "    return review text as list of sentences and aspect ratings\n",
+        "    \"\"\""
+      ],
+      "metadata": {
+        "id": "1rYfSug_5Vlf"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# tokenizer = get_tokenizer('basic_english')\n",
+        "\n",
+        "def yield_ided_review(dataset_path=RATEBEER_FILE, max_lines=1000000000):\n",
+        "    def yield_tokens():\n",
+        "        with io.open(dataset_path, encoding='utf-8') as f:\n",
+        "            counter = 0\n",
+        "            review_lines = []\n",
+        "            for line, _ in zip(f, range(max_lines)):\n",
+        "                if counter < 13:\n",
+        "                    review_lines.append(line)\n",
+        "                    counter += 1\n",
+        "                else:\n",
+        "                    review_aspects = review_lines[5:10]\n",
+        "                    review_aspects = list(map(lambda s: int(s.split(': ')[1].split('/')[0]), review_aspects))\n",
+        "                    review_sentences = review[12].lower().split(': ')[1].split('.')\n",
+        "                    reviev_senteces = list(map(review_text2ids, review_sentences))\n",
+        "                    result = (review_sentences, review_aspects)\n",
+        "                    ic(result)\n",
+        "                    raise BaseException\n",
+        "                    yield (review_sentences, review_aspects) # TODO remove punctuation\n",
+        "                    # line = line.strip().split()\n",
+        "                    counter = 0\n",
+        "                    review_lines = []\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "3FhhxmWw4rGB"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "ided_reviews = yield_ided_reviews(max_lines=int(2e6))"
+      ],
+      "metadata": {
+        "id": "daY1ZHl4-glT"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def sentence_aspects_likelihood_theta(sen_ids):\n",
+        "    theta_theta = theta[sen_ids]\n",
+        "    theta_score = theta_theta.sum(0)\n",
+        "    return theta_score\n",
+        "\n",
+        "def sentence_aspects_likelihood_phi(sen_ids, ratings):\n",
+        "    phi_score = [phis[aspect_idx][sen_ids, ratings[aspect_idx]] for aspect_idx in range(aspect_count)] \n",
+        "    phi_score = [phi.sum(0) for phi in phi_score]\n",
+        "    return phi_score\n",
+        "\n",
+        "def sentence_aspects_likelihood(sen_ids, ratings):\n",
+        "    score = torch.exp(sentence_aspects_likelihood_theta(sen_ids) + sentence_aspects_likelihood_phi(sen_ids, ratings))\n",
+        "    return score / score.sum()"
+      ],
+      "metadata": {
+        "id": "-BbREMkrBEph"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "UR2BLDFGCNdi"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# def review_aspect_likelihoods(review_sentences: str):\n",
+        "#   theta_weight, phi_weight = 1.0, 1.0\n",
+        "#   thetas, phis = review_text2weights(review_text)\n",
+        "#     for s in review_sentences:\n",
+        "\n",
+        "# #   return map(\n",
+        "# #       lambda s:,\n",
+        "# #       review_sentences\n",
+        "# #   )\n",
+        "#   return torch.mean(\n",
+        "#       theta_weight * thetas +\n",
+        "#       phi_weight * phis\n",
+        "#   )"
+      ],
+      "metadata": {
+        "id": "8e_lSSOF_XdK"
       },
       "execution_count": null,
       "outputs": []
