Rather not working :(

--- a/1e100ibu.ipynb
+++ b/1e100ibu.ipynb
@@ -51,7 +51,7 @@
       "metadata": {
         "id": "Sl9RJDTxJOTY"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -65,20 +65,26 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Yet9JpBt8kcx",
-        "outputId": "5f3252cd-d2a7-40f4-8b01-9242e44ad660"
+        "outputId": "1aad5eb6-f4f0-46ba-edcd-ea917d3fd408"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Requirement already satisfied: icecream in /usr/local/lib/python3.7/dist-packages (2.1.1)\n",
-            "Requirement already satisfied: asttokens>=2.0.1 in /usr/local/lib/python3.7/dist-packages (from icecream) (2.0.5)\n",
+            "Collecting icecream\n",
+            "  Downloading icecream-2.1.1-py2.py3-none-any.whl (8.1 kB)\n",
+            "Collecting executing>=0.3.1\n",
+            "  Downloading executing-0.8.2-py2.py3-none-any.whl (16 kB)\n",
+            "Collecting colorama>=0.3.9\n",
+            "  Downloading colorama-0.4.4-py2.py3-none-any.whl (16 kB)\n",
+            "Collecting asttokens>=2.0.1\n",
+            "  Downloading asttokens-2.0.5-py2.py3-none-any.whl (20 kB)\n",
             "Requirement already satisfied: pygments>=2.2.0 in /usr/local/lib/python3.7/dist-packages (from icecream) (2.6.1)\n",
-            "Requirement already satisfied: executing>=0.3.1 in /usr/local/lib/python3.7/dist-packages (from icecream) (0.8.2)\n",
-            "Requirement already satisfied: colorama>=0.3.9 in /usr/local/lib/python3.7/dist-packages (from icecream) (0.4.4)\n",
-            "Requirement already satisfied: six in /usr/local/lib/python3.7/dist-packages (from asttokens>=2.0.1->icecream) (1.15.0)\n"
+            "Requirement already satisfied: six in /usr/local/lib/python3.7/dist-packages (from asttokens>=2.0.1->icecream) (1.15.0)\n",
+            "Installing collected packages: executing, colorama, asttokens, icecream\n",
+            "Successfully installed asttokens-2.0.5 colorama-0.4.4 executing-0.8.2 icecream-2.1.1\n"
           ]
         }
       ]
@@ -94,13 +100,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "TZ8cumFHEEQd",
-        "outputId": "24560a00-cc9d-4951-c43e-f999fffd0c6f"
+        "outputId": "9ec912d7-f0a4-4a8a-e821-e28baa2e126b"
       },
       "outputs": [
         {
@@ -110,7 +116,7 @@
             "Downloading...\n",
             "From: https://drive.google.com/uc?id=12tEEYQcHZtg5aWyfIiWWVIDAJNT-5d_T\n",
             "To: /content/SNAP-Ratebeer.txt\n",
-            "100% 1.74G/1.74G [00:16<00:00, 108MB/s]\n",
+            "100% 1.74G/1.74G [00:19<00:00, 91.2MB/s]\n",
             "Dataset head (trailing newline makes entry end): \n",
             "beer/name: John Harvards Simcoe IPA\n",
             "beer/beerId: 63836\n",
@@ -171,7 +177,7 @@
       "metadata": {
         "id": "2W2kAaEJI_iI"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -182,7 +188,7 @@
       "metadata": {
         "id": "LQJqC6WDcYyQ"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -212,9 +218,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "CghoFLGMnHbF",
-        "outputId": "bfcfced1-fb14-470b-a769-14c8524ccd95"
+        "outputId": "91464a39-cd9c-4a81-918a-59e57c76ab4c"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -252,9 +258,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "PG0oYrrgn9S7",
-        "outputId": "b7b49f6e-5a85-4bfd-813d-a05e4e5ed344"
+        "outputId": "b6c4b687-19f4-469d-b40e-823f78ef4481"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -283,7 +289,7 @@
       "metadata": {
         "id": "eUoc6febB8vQ"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -295,22 +301,24 @@
         "    theta *= 0.9\n",
         "#   torch.nn.init.kaiming_uniform_(theta)\n",
         "  # enforce 1 initialization on aspect name (page 4)\n",
-        "  aspect_ids = vocab.lookup_indices(aspects)\n",
-        "  theta[aspect_ids, :] = 1\n",
+        "    aspect_ids = vocab.lookup_indices(aspects)\n",
+        "    theta[aspect_ids, :] = 1\n",
         "\n",
         "# phi = torch.rand((word_count, , aspect_count), requires_grad=True)\n",
         "\n",
-        "aspect_max_rating = [5, 10, 5, 10, 20]\n",
-        "phis = {i : torch.rand((word_count, aspect_max_rating[i]), requires_grad=True) for i in range(aspect_count)}\n",
+        "aspect_rating_count = [6, 11, 6, 11, 21]\n",
+        "phis = [torch.rand((word_count, aspect_rating_count[i]), requires_grad=True) for i in range(aspect_count)]\n",
         "\n",
         "with torch.no_grad():\n",
-        "  # normalize that sum across all words is 1 for a given aspect (eq. 7)\n",
-        "  phis = {i : phi / phi.sum(dim=0) for i, phi in phis.items()}"
+        "    # normalize that sum across all words is 1 for a given aspect (eq. 7)\n",
+        "    phis = [phi / phi.sum(dim=0) for phi in phis]\n",
+        "for phi in phis:\n",
+        "    phi.requires_grad = True\n"
       ],
       "metadata": {
         "id": "VGjeZUFLsZ5e"
       },
-      "execution_count": null,
+      "execution_count": 83,
       "outputs": []
     },
     {
@@ -336,7 +344,7 @@
       "metadata": {
         "id": "qbpx6lSOwfkg"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -441,7 +449,7 @@
       "metadata": {
         "id": "1rYfSug_5Vlf"
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -450,43 +458,47 @@
         "# tokenizer = get_tokenizer('basic_english')\n",
         "\n",
         "def yield_ided_review(dataset_path=RATEBEER_FILE, max_lines=1000000000):\n",
-        "    def yield_tokens():\n",
-        "        with io.open(dataset_path, encoding='utf-8') as f:\n",
-        "            counter = 0\n",
-        "            review_lines = []\n",
-        "            for line, _ in zip(f, range(max_lines)):\n",
-        "                if counter < 13:\n",
-        "                    review_lines.append(line)\n",
-        "                    counter += 1\n",
-        "                else:\n",
-        "                    review_aspects = review_lines[5:10]\n",
-        "                    review_aspects = list(map(lambda s: int(s.split(': ')[1].split('/')[0]), review_aspects))\n",
-        "                    review_sentences = review[12].lower().split(': ')[1].split('.')\n",
-        "                    reviev_senteces = list(map(review_text2ids, review_sentences))\n",
-        "                    result = (review_sentences, review_aspects)\n",
-        "                    ic(result)\n",
-        "                    raise BaseException\n",
-        "                    yield (review_sentences, review_aspects) # TODO remove punctuation\n",
-        "                    # line = line.strip().split()\n",
-        "                    counter = 0\n",
-        "                    review_lines = []\n",
+        "    with io.open(dataset_path, encoding='utf-8') as f:\n",
+        "        counter = 0\n",
+        "        review_lines = []\n",
+        "        for line, _ in zip(f, range(max_lines)):\n",
+        "            if counter < 13:\n",
+        "                review_lines.append(line)\n",
+        "                counter += 1\n",
+        "            else:\n",
+        "                review_aspects_scores = review_lines[5:10]\n",
+        "                review_aspects_scores = list(map(lambda s: int(s.split(': ')[1].split('/')[0]), review_aspects_scores))\n",
+        "                \n",
+        "                # wywalamy review/text\n",
+        "                review_sentences = review_lines[12].lower()[len(\"review/text: \"):]\n",
+        "                if line.startswith(\"UPDATED:\"):\n",
+        "                    review_sentences = review_sentences[len(\"UPDATED: APR 29, 2008\"):] # drop prefix\n",
+        "                \n",
+        "                review_sentences = review_sentences.split('.')\n",
+        "                review_sentences = list(filter(lambda l: len(l) != 0, (map(review_text2ids, review_sentences))))\n",
+        "                result = (review_sentences, review_aspects_scores)\n",
+        "                # raise BaseException\n",
+        "                yield (review_sentences, review_aspects_scores) # TODO remove punctuation\n",
+        "                # line = line.strip().split()\n",
+        "                counter = 0\n",
+        "                review_lines = []\n",
         "\n"
       ],
       "metadata": {
         "id": "3FhhxmWw4rGB"
       },
-      "execution_count": null,
+      "execution_count": 44,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "ided_reviews = yield_ided_reviews(max_lines=int(2e6))"
+        "# ided_reviews = yield_ided_reviews(max_lines=int(2e6))"
       ],
       "metadata": {
         "id": "daY1ZHl4-glT"
       },
-      "execution_count": null,
+      "execution_count": 40,
       "outputs": []
     },
     {
@@ -494,34 +506,99 @@
       "source": [
         "def sentence_aspects_likelihood_theta(sen_ids):\n",
         "    theta_theta = theta[sen_ids]\n",
-        "    theta_score = theta_theta.sum(0)\n",
+        "    theta_score = theta_theta\n",
         "    return theta_score\n",
         "\n",
-        "def sentence_aspects_likelihood_phi(sen_ids, ratings):\n",
-        "    phi_score = [phis[aspect_idx][sen_ids, ratings[aspect_idx]] for aspect_idx in range(aspect_count)] \n",
-        "    phi_score = [phi.sum(0) for phi in phi_score]\n",
-        "    return phi_score\n",
+        "def sentence_aspects_likelihood_phi(sen_ids):\n",
+        "    phi_scores = [phis[aspect_idx][sen_ids, :] for aspect_idx in range(aspect_count)]\n",
+        "    return phi_scores\n",
         "\n",
-        "def sentence_aspects_likelihood(sen_ids, ratings):\n",
-        "    score = torch.exp(sentence_aspects_likelihood_theta(sen_ids) + sentence_aspects_likelihood_phi(sen_ids, ratings))\n",
-        "    return score / score.sum()"
+        "# def sentence_aspects_likelihood(sen_ids):\n",
+        "#     theta_score = sentence_aspects_likelihood_theta(sen_ids)\n",
+        "#     phi_scores = sentence_aspects_likelihood_phi(sen_ids)\n",
+        "#     ic(theta_score, phi_scores)\n",
+        "\n",
+        "    # score = torch.exp( + sentence_aspects_likelihood_phi(sen_ids, ratings))\n",
+        "    # return score / score.sum()\n"
       ],
       "metadata": {
         "id": "-BbREMkrBEph"
       },
-      "execution_count": null,
+      "execution_count": 49,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        ""
+        "for (review_sentences, review_aspects_scores) in yield_ided_review(max_lines=int(2e6)):\n",
+        "    for sen_ids in review_sentences:\n",
+        "        theta_scores = sentence_aspects_likelihood_theta(sen_ids)\n",
+        "        aspect_pred = int(torch.argmax(torch.nn.functional.softmax(theta_scores.sum(0))).item())\n",
+        "\n",
+        "        pred_aspect_rating = review_aspects_scores[aspect_pred]\n",
+        "        phi_score = sentence_aspects_likelihood_phi(sen_ids)[aspect_pred][:, pred_aspect_rating]\n",
+        "        \n",
+        "        asd = (theta_scores[:, aspect_pred] + phi_score).sum()\n",
+        "        ic(asd)\n",
+        "\n",
+        "        ic(torch.square(theta).sum())\n",
+        "        \n",
+        "        # ic(torch.hstack(list(torch.square(phi).sum() for phi in phis)).sum())\n",
+        "\n",
+        "        loss = -asd\n",
+        "        loss.backward()\n",
+        "        ic(theta.grad)\n",
+        "        ic(phis[0].requires_grad)\n",
+        "\n",
+        "        ic(phis[0].grad)\n",
+        "\n",
+        "        # with torch.no_grad():\n",
+        "        #     theta -= 0.01 * theta.grad\n",
+        "        #     phis = [phi - 0.01 * phi.grad for phi in phis]\n",
+        "        raise BaseException\n",
+        "\n"
       ],
       "metadata": {
-        "id": "UR2BLDFGCNdi"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 463
+        },
+        "id": "UR2BLDFGCNdi",
+        "outputId": "b166493b-af94-41da-8537-1242e337611f"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 90,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:4: UserWarning: Implicit dimension choice for softmax has been deprecated. Change the call to include dim=X as an argument.\n",
+            "  after removing the cwd from sys.path.\n",
+            "ic| asd: tensor(3.8628, grad_fn=<SumBackward0>)\n",
+            "ic| torch.square(theta).sum(): tensor(865641.8750, grad_fn=<SumBackward0>)\n",
+            "ic| theta.grad: tensor([[ 0.,  0.,  0.,  0.,  0.],\n",
+            "                        [ 0.,  0.,  0.,  0.,  0.],\n",
+            "                        [ 0., -7.,  0.,  0.,  0.],\n",
+            "                        ...,\n",
+            "                        [ 0.,  0.,  0.,  0.,  0.],\n",
+            "                        [ 0.,  0.,  0.,  0.,  0.],\n",
+            "                        [ 0.,  0.,  0.,  0.,  0.]])\n",
+            "ic| phis[0].requires_grad: True\n",
+            "ic| phis[0].grad: None\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "BaseException",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mBaseException\u001b[0m                             Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-90-294f2bb60fd2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     24\u001b[0m         \u001b[0;31m#     theta -= 0.01 * theta.grad\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m         \u001b[0;31m#     phis = [phi - 0.01 * phi.grad for phi in phis]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 26\u001b[0;31m         \u001b[0;32mraise\u001b[0m \u001b[0mBaseException\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     27\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mBaseException\u001b[0m: "
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
