Actually working (kinda) B)

--- a/1e100ibu.ipynb
+++ b/1e100ibu.ipynb
@@ -544,29 +544,26 @@
         "        ic(torch.square(theta).sum())\n",
         "        \n",
         "        # ic(torch.hstack(list(torch.square(phi).sum() for phi in phis)).sum())\n",
-        "\n",
+        "        \n",
         "        loss = -asd\n",
         "        loss.backward()\n",
         "        ic(theta.grad)\n",
-        "        ic(phis[0].requires_grad)\n",
         "\n",
-        "        ic(phis[0].grad)\n",
-        "\n",
-        "        # with torch.no_grad():\n",
-        "        #     theta -= 0.01 * theta.grad\n",
-        "        #     phis = [phi - 0.01 * phi.grad for phi in phis]\n",
+        "        with torch.no_grad():\n",
+        "            theta -= 0.01 * theta.grad\n",
+        "            phis = [phi - 0.01 * phi.grad if phi.grad != None else phi for phi in phis ]\n",
         "        raise BaseException\n",
         "\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 463
+          "height": 446
         },
         "id": "UR2BLDFGCNdi",
-        "outputId": "b166493b-af94-41da-8537-1242e337611f"
+        "outputId": "3ab9ecb1-c984-46e2-c326-5e5b4b79f8d1"
       },
-      "execution_count": 90,
+      "execution_count": 107,
       "outputs": [
         {
           "output_type": "stream",
@@ -574,17 +571,16 @@
           "text": [
             "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:4: UserWarning: Implicit dimension choice for softmax has been deprecated. Change the call to include dim=X as an argument.\n",
             "  after removing the cwd from sys.path.\n",
-            "ic| asd: tensor(3.8628, grad_fn=<SumBackward0>)\n",
-            "ic| torch.square(theta).sum(): tensor(865641.8750, grad_fn=<SumBackward0>)\n",
-            "ic| theta.grad: tensor([[ 0.,  0.,  0.,  0.,  0.],\n",
-            "                        [ 0.,  0.,  0.,  0.,  0.],\n",
-            "                        [ 0., -7.,  0.,  0.,  0.],\n",
+            "ic| asd: tensor(5.7028, grad_fn=<SumBackward0>)\n",
+            "ic| torch.square(theta).sum(): tensor(865644., grad_fn=<SumBackward0>)\n",
+            "ic| theta.grad: tensor([[  0.,   0.,   0.,   0.,   0.],\n",
+            "                        [  0.,   0.,   0.,   0.,   0.],\n",
+            "                        [  0., -24.,   0.,   0.,   0.],\n",
             "                        ...,\n",
-            "                        [ 0.,  0.,  0.,  0.,  0.],\n",
-            "                        [ 0.,  0.,  0.,  0.,  0.],\n",
-            "                        [ 0.,  0.,  0.,  0.,  0.]])\n",
-            "ic| phis[0].requires_grad: True\n",
-            "ic| phis[0].grad: None\n"
+            "                        [  0.,   0.,   0.,   0.,   0.],\n",
+            "                        [  0.,   0.,   0.,   0.,   0.],\n",
+            "                        [  0.,   0.,   0.,   0.,   0.]])\n",
+            "ic| phis[0].requires_grad: True\n"
           ]
         },
         {
@@ -594,7 +590,7 @@
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mBaseException\u001b[0m                             Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-90-294f2bb60fd2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     24\u001b[0m         \u001b[0;31m#     theta -= 0.01 * theta.grad\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m         \u001b[0;31m#     phis = [phi - 0.01 * phi.grad for phi in phis]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 26\u001b[0;31m         \u001b[0;32mraise\u001b[0m \u001b[0mBaseException\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     27\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-107-6253694c3e77>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     23\u001b[0m             \u001b[0mtheta\u001b[0m \u001b[0;34m-=\u001b[0m \u001b[0;36m0.01\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mtheta\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgrad\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     24\u001b[0m             \u001b[0mphis\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mphi\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0;36m0.01\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mphi\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgrad\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mphi\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgrad\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;32mNone\u001b[0m \u001b[0;32melse\u001b[0m \u001b[0mphi\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mphi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mphis\u001b[0m \u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 25\u001b[0;31m         \u001b[0;32mraise\u001b[0m \u001b[0mBaseException\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     26\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;31mBaseException\u001b[0m: "
           ]
         }
