--- a/1e100ibu.ipynb
+++ b/1e100ibu.ipynb
@@ -323,6 +323,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# word ID-s count and 1K of least common words\n",
         "print(len(rb.vocab.get_itos()))\n",
         "print(rb.vocab.get_itos()[-1000:])"
       ],
